Made few performance fixes
Chest interaction log is now async & saves every 60s

With updateconfig command, all config changes apply instant

--- a/plugins/MCS/src/main/resources/plugin.yml
+++ b/plugins/MCS/src/main/resources/plugin.yml
@@ -8,3 +8,5 @@ commands:
     description: Displays stats of player (e.g. deaths, kills, ..)
   viewblocks:
     description: Sends a message to admin everytime a valuable block is broken
+  updateconfig:
+    description: Reloads the config
