Removed unnecessary config comments

--- a/nginx-configs/gympw-mc.de.conf
+++ b/nginx-configs/gympw-mc.de.conf
@@ -7,8 +7,8 @@ server {
         root           /var/www/html;
         index          index.php index.html index.htm;
         
-    ssl_certificate /etc/cloudflare-certificate/cyzetlc.eu/fullchain.pem;
-    ssl_certificate_key /etc/cloudflare-certificate/cyzetlc.eu/privkey.pem;
+    ssl_certificate /etc/cloudflare-certificate/gympw-mc.de/fullchain.pem;
+    ssl_certificate_key /etc/cloudflare-certificate/gympw-mc.de/privkey.pem;
     ssl_session_timeout 1d;
     ssl_session_cache shared:SSL:50m;
     ssl_session_tickets off;
@@ -30,12 +30,10 @@ server {
     location ~ ^/review/?(.*)$ {
        set $review_player $1;
 
-       # Wenn $review_player leer ist, leite auf review.php ohne Parameter
        if ($review_player = "") {
            rewrite ^ /stats.php last;
        }
 
-       # Sonst mit Parameter
        try_files $uri /stats.php?player=$review_player&$query_string;
     }
 
