Added EnderChestCommand (/enderchest, /ec)

--- a/plugins/MCS/src/main/resources/plugin.yml
+++ b/plugins/MCS/src/main/resources/plugin.yml
@@ -11,3 +11,7 @@ commands:
     description: Sends a message to admin everytime a valuable block is broken
   updateconfig:
     description: Reloads the config
+  enderchest:
+    aliases:
+      - ec
+    description: Opens the enderchest of player or specific target
