Initial commit for chat-format-feature (config & listener)

--- a/plugins/MCS/src/main/resources/config.yml
+++ b/plugins/MCS/src/main/resources/config.yml
@@ -28,3 +28,6 @@ enableChestBreakLog: true
 
 # Zeigt einen Admin-Prefix in der Tablist an
 displayAdminPrefix: true
+
+# Ändert das default Chatformat zu einem modernen Design
+enableChatFormat: false
