--- a/plugins/MCS/src/main/resources/config.yml
+++ b/plugins/MCS/src/main/resources/config.yml
@@ -10,6 +10,11 @@
 #  Made by CyZeTLC
 ############################################################
 
+# ==========================================================
+# General Settings
+# ==========================================================
+
+enableEndPortal: false
 
 # ==========================================================
 # Chest Interaction Settings
